Added python script to update trip start time for output generated by select link analysis, added parameters in globalTemplate.properties file, and added methodology to ad select link analysis. Issue #151

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -733,8 +733,8 @@ ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_02_HIST_00_2010.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_02_HIST_00_2010.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_07_HIST_00_2010.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_07_HIST_00_2010.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
@@ -805,6 +805,13 @@ sl.output.file.select.link.review = sl_review.csv
 
 sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/select_link_outputs.zip
 
+sl.update.start.time.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/sl_update_start_time.py
+sl.use.skims = op
+# Continuous travel time allowed in minutes
+sl.continuous.travel.time = 360
+# Break time in minutes
+sl.break.time = 30
+
 ################################## VIZ Database Properties ##################################
 viz.activity.constraints = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/ActivityConstraintsI.csv
 viz.exchange.results.targets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/ExchangeResultsTargetsI.csv
@@ -836,10 +843,10 @@ swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/swimr/swimr_render_r
 # SWIMR_compare -------------
 # "Current" database is viz.final.db above
 # "Reference" database:
-swimr.reference.db = D:/swim26/Ref26_1_03/outputs/Ref26_1_03.db
+swimr.reference.db = D:/swim26/Ref26_1_04/outputs/Ref26_1_04.db
 
 # SWIMR_popemp ---------------
 # "Current" database is viz.final.db above
 # "Reference" database is swimr.reference.db above
 # "Compare" database is:
-swimr.compare.db = D:/swim26/Ref26_1_03/outputs/Ref26_1_03.db
+swimr.compare.db = D:/swim26/Ref26_1_04/outputs/Ref26_1_04.db
