Updated properties file and script to add capacity adjustment factors and impedance penalty factors for truck assignment. issue #76 and issue #133

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -109,6 +109,18 @@ nt.offpeak.end = 659
 nt.peak.start = 1800
 nt.peak.end = 659
 
+# Capacity adjustment factors by time PERIOD
+am.peak.capacity.adjustment = 2
+pm.peak.capacity.adjustment = 2
+md.offpeak.capacity.adjustment = 6.5
+nt.offpeak.capacity.adjustment = 7.5
+
+# Impedance penalty for truck assignments
+imp.penalty.interstate = 0
+imp.penalty.principal.arterial = 0
+imp.penalty.minor.arterial = 0
+imp.penalty.other.roads = 0
+
 matrix.extension                                      = .zmx
 
 #Name of Fields in SynPopP and SynPopH files used by SPG and PT.
