Added the new scripts and updated visum main script to run number of cores test. Issue #156

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -738,6 +738,8 @@ et.basis.year = 8
 
 
 ################################## TA Properties ##################################
+ta.num.processors = 18
+tr.num.processors = 18
 ta.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/SWIM_VISUM_Main.py
 #si.activityconstraintsi.worldmarkets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/ActivityConstraintsIWorldMarkets.csv
 si.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/si.properties
